--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -879,7 +879,7 @@
 /*#----------------------Третья страница------------------------*/
 
 .section-3 {
-    background-image: url("images/background_part_3.png");
+    background-image: url("../img/background_part_3.png");
     background-color: rgba(14, 14, 14, 0.39);
     background-size: cover;
     background-repeat: no-repeat;
