--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -821,7 +821,7 @@ color: #282828;
             grid-row-gap: 50px;
             padding-left: 120px;
         }
-      
+    
         &__item{
             margin-left: 10px;
         }
@@ -829,58 +829,17 @@ color: #282828;
 }
 
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .reviews {
-        padding-top: 25px;
-        min-height: 750px;
-    }
+        max-width: 750px;
 
-    .reviews__container {
-        padding: 0;
-        width: 85%;
-    }
-
-    .photo {
-        width: 100%;
-        &__item{
-            margin: 0 20px 50px 20px;
-            width: 225px;
-        }
-        &__img{
-            left: 60px;
+        &__container-title{
+        margin-left: 260px;
         }
     }
 
 }
 
-
-@media only screen and (max-width: 623px) {
-    .reviews {
-        height: 1500px;
-    }
-
-    .photo__container {
-        justify-content: center;
-    }
-}
-
-@media only screen and (max-width: 440px) {
-    .reviews__title {
-        font-size: 12px;
-    }
-
-    .reviews__subtitle {
-        font-size: 25px;
-    }
-
-    .reviews__container {
-        width: 95%;
-    }
-
-    .photo__img {
-        left: 60px;
-    }
-}
 /*----------------------Page 4------------------------*/
 .special-product{
     width: 100%;
@@ -891,6 +850,7 @@ color: #282828;
 .special{
 grid-template-rows: 1fr;
 }
+
 .block-name {
 
     &__line{
@@ -953,7 +913,7 @@ grid-template-rows: 1fr;
         position: absolute;
         border-top: 0.6px solid black;
         width: 140px;
-        right: 182px;
+        right: 396px;
     }
 
     &__button-line::after {
@@ -1023,7 +983,35 @@ grid-template-rows: 1fr;
     margin-right: 10vw;
     background-color: white;
 }
-
+@media screen and (max-width: 1440px) {
+    .block-name{
+        &__button-line::before {
+            right: 166px;
+        }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .special-product{
+        width: 100%;
+        max-width: 950px;
+        margin: 0 auto;
+    }
+    .block-name{
+        &__button-line::before {
+            right: 36px;
+        }
+    }
+}
+@media screen and (max-width: 768px) {
+    .special-product{
+        max-width: 750px;
+    }
+    .block-name{
+        &__button-line::before {
+            right: 10px;
+        }
+    }
+}
 /*----------------------Part 5 Смирнова Анна начало------------------------*/
 @media screen and (min-width: 1024px) {
     .articles {
