added media screen

--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    /*outline: 1px solid red;*/
 }
 
 li {
@@ -9,4 +11,9 @@ li {
 
 a {
     text-decoration: none;
+}
+button{
+    padding: 0;
+    background-color: transparent;
+    border: none;
 }
