--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -960,10 +960,19 @@ grid-template-rows: 1fr;
     &__button{
         height: 40px;
         width: 135px;
+        font-family: 'Nunito Sans';
+        font-style: normal;
+        font-weight: 400;
+        line-height: 60px;
         color: #1B1A1A;
         font-size: 14px;
         text-align: center;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; 
+        cursor: pointer;
     }
     &__button:hover {
         background-color:  #999999;
@@ -987,9 +996,9 @@ grid-template-rows: 1fr;
     &__button::before {
         content: "";
         position: absolute;
-        border-right: 0.6px solid #1B1A1A;
+        background: #1B1A1A;
         height: 47px;
-        /*width: 114px;*/
+        width: 0.6px;
         left: 0;
         bottom: 0;
     }
@@ -997,8 +1006,10 @@ grid-template-rows: 1fr;
     &__button-line::before {
         content: "";
         position: absolute;
-        border-top: 0.6px solid #1B1A1A;
+        //border-top: 0.6px solid #1B1A1A;
         width: 140px;
+        height: 0.6px;
+        background: #1B1A1A;
         right: 1px;
     }
 
@@ -1007,6 +1018,8 @@ grid-template-rows: 1fr;
         position: absolute;
         border-left: 0.6px solid #1B1A1A;
         height: 45px;
+        right: 0;
+        top: 0;
     }
 }
 @media (max-width: 1024px) {
@@ -1310,9 +1323,7 @@ grid-template-rows: 1fr;
             height: 37px;
             width: 133px;
             position: relative;
-            margin-bottom: 25px;
-            margin-left: 29px;
-            margin-top: 13px;
+            margin: 13px 0 25px 29px;
             //text-align: center;
         }
         &__button-line::before {
@@ -1338,11 +1349,6 @@ grid-template-rows: 1fr;
     //margin: 0 auto;
 }
 
-.swiper-button-next::after,
-.swiper-button-prev::after {
-    color: #1B1A1A;
-
-}
 @media (max-width: 1024px) {
     .articles{
         max-width: 980px;
@@ -1407,10 +1413,6 @@ grid-template-rows: 1fr;
     }
     .swiper{
         width: 680px;
-    }
-    .swiper-button-next::after,
-    .swiper-button-prev::after {
-        display: none;
     }
 
 }
